[tool.poetry]
name = "helena-data"
version = "0.1.0"
description = ""
authors = ["Daniel Balzerson <dan@ddajohnson.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
